- author quests in Profile after user edit fixed; - ContentService refactoring; - LocaleConfig was updated (for java 21); - ImageService refactoring; - appStyles.css was updated;